--- a/Synapse.Enterprise.Api.Common/Synapse.Enterprise.Api.Common.csproj
+++ b/Synapse.Enterprise.Api.Common/Synapse.Enterprise.Api.Common.csproj
@@ -51,13 +51,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BaseClasses\SynapseRecordBase.cs" />
     <Compile Include="Classes\CoreClasses\PlanInstance.cs" />
     <Compile Include="Classes\CoreClasses\PlanContainer.cs" />
     <Compile Include="Classes\CoreClasses\PlanItem.cs" />
+    <Compile Include="Classes\BaseClasses\ISynapseRecord.cs" />
     <Compile Include="Classes\PermissionSet.cs" />
     <Compile Include="Classes\SuplexSecurity.cs" />
     <Compile Include="Suplex\SuplexSecurity.cs" />
-    <Compile Include="Classes\Interfaces\IEnterpriseDal.cs" />
+    <Compile Include="Classes\BaseClasses\IEnterpriseDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
