--- a/Synapse.Enterprise.Api.Dal.SqlServer/Synapse.Enterprise.Api.Dal.SqlServer.csproj
+++ b/Synapse.Enterprise.Api.Dal.SqlServer/Synapse.Enterprise.Api.Dal.SqlServer.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Suplex.Core">
+      <HintPath>..\packages\Suplex.Core.4.0.0.1\lib\net40\Suplex.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SqlServerDal.cs" />
+    <Compile Include="PlanContainer.cs" />
+    <Compile Include="Plan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -48,6 +53,9 @@
       <Project>{c2d081ef-8454-4d63-8d36-ea67bb9183ea}</Project>
       <Name>Synapse.Enterprise.Api.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
