--- a/Synapse.Enterprise.Api.Dal.SqlServer/Synapse.Enterprise.Api.Dal.SqlServer.csproj
+++ b/Synapse.Enterprise.Api.Dal.SqlServer/Synapse.Enterprise.Api.Dal.SqlServer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E8837A4C-6B6B-423E-9CBB-40C70DE2E645}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Synapse.Services.Enterprise.Api.Dal</RootNamespace>
     <AssemblyName>Synapse.Enterprise.Api.Dal.SqlServer</AssemblyName>
@@ -29,7 +29,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Synapse.Services.Enterprise.Api.Dal.Tester</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Suplex.BitLib">
+      <HintPath>..\packages\Suplex.Bitlib.1.0.0.3\lib\net35\Suplex.BitLib.dll</HintPath>
+    </Reference>
     <Reference Include="Suplex.Core, Version=4.0.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Suplex\Core\Core\bin\Debug\Suplex.Core.dll</HintPath>
@@ -44,10 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseClasses\ISynapseRecordFactory.cs" />
     <Compile Include="SqlServerDal.cs" />
     <Compile Include="CoreClasses\PlanContainer.cs" />
     <Compile Include="CoreClasses\PlanItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tester.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Synapse.Enterprise.Api.Common\Synapse.Enterprise.Api.Common.csproj">
