--- a/Synapse.Enterprise.Api.Common/Synapse.Enterprise.Api.Common.csproj
+++ b/Synapse.Enterprise.Api.Common/Synapse.Enterprise.Api.Common.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BaseClasses\IEnterpriseDalConfig.cs" />
     <Compile Include="Classes\BaseClasses\SynapseRecordBase.cs" />
     <Compile Include="Classes\CoreClasses\PlanInstance.cs" />
     <Compile Include="Classes\CoreClasses\PlanContainer.cs" />
