--- a/Synapse.Enterprise.Api.Dal.SqlServer/Synapse.Enterprise.Api.Dal.SqlServer.csproj
+++ b/Synapse.Enterprise.Api.Dal.SqlServer/Synapse.Enterprise.Api.Dal.SqlServer.csproj
@@ -37,21 +37,30 @@
       <HintPath>..\packages\Suplex.BitLib.1.0.0.3\lib\net35\Suplex.BitLib.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Suplex.Core, Version=4.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Suplex\Core\Core\bin\Debug\Suplex.Core.dll</HintPath>
+    <Reference Include="Suplex.Core">
+      <HintPath>..\..\..\git\Suplex\Core\Core\bin\Debug\Suplex.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Synapse.Core, Version=0.1.0.0, Culture=neutral, PublicKeyToken=a6de1cc56b73f982, processorArchitecture=MSIL">
+      <HintPath>..\packages\Synapse.Core.Signed.0.1.17166.0-beta\lib\net45\Synapse.Core.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="YamlDotNet, Version=4.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
+      <HintPath>..\packages\YamlDotNet.Signed.4.0.0\lib\net35\YamlDotNet.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseClasses\ISynapseRecordFactory.cs" />
+    <Compile Include="CoreClasses\SqlServerDalConfig.cs" />
     <Compile Include="SqlServerDal.cs" />
     <Compile Include="CoreClasses\PlanContainer.cs" />
     <Compile Include="CoreClasses\PlanItem.cs" />
