--- a/Synapse.Enterprise.Api.Dal.SqlServer/packages.config
+++ b/Synapse.Enterprise.Api.Dal.SqlServer/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Suplex.BitLib" version="1.0.0.3" targetFramework="net452" />
   <package id="Suplex.Core" version="4.0.0.1" targetFramework="net452" />
+  <package id="Synapse.Core.Signed" version="0.1.17166.0-beta" targetFramework="net452" />
+  <package id="YamlDotNet.Signed" version="4.0.0" targetFramework="net452" />
 </packages>
