--- a/Synapse.Enterprise.Api.Dal.SqlServer/Synapse.Enterprise.Api.Dal.SqlServer.csproj
+++ b/Synapse.Enterprise.Api.Dal.SqlServer/Synapse.Enterprise.Api.Dal.SqlServer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E8837A4C-6B6B-423E-9CBB-40C70DE2E645}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Synapse.Services.Enterprise.Api.Dal</RootNamespace>
     <AssemblyName>Synapse.Enterprise.Api.Dal.SqlServer</AssemblyName>
@@ -30,7 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Synapse.Services.Enterprise.Api.Dal.Tester</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.MSScriptControl, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
