--- a/Synapse.Enterprise.Api.Common/packages.config
+++ b/Synapse.Enterprise.Api.Common/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Suplex.Core" version="4.0.0.2" targetFramework="net452" />
+  <package id="Suplex.Security.Core" version="1.0.18163" targetFramework="net452" />
 </packages>
