--- a/Synapse.Enterprise.Api/packages.config
+++ b/Synapse.Enterprise.Api/packages.config
@@ -10,4 +10,7 @@
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Synapse.Common" version="1.0.18048" targetFramework="net452" />
+  <package id="Synapse.Core.Signed" version="1.0.18056" targetFramework="net452" />
+  <package id="YamlDotNet.Signed" version="4.0.0" targetFramework="net452" />
 </packages>
